# openapi/onboarding-application-service.yaml
@@ -63,13 +63,6 @@ paths:
                   position: "Finance Manager"
                   isDecisionMaker: true
                   contactType: "Primary"
-                - firstName: "Marko"
-                  lastName: "Marković"
-                  email: "marko.markovic@example.com"
-                  phoneNumber: "+385921234567"
-                  position: "Operations Manager"
-                  isDecisionMaker: false
-                  contactType: "Secondary"
 
               productSelections:
                 - productLineCode: "WEBPAY"
@@ -266,10 +259,9 @@ components:
         contacts:
           type: array
           minItems: 1
-          maxItems: 2
+          maxItems: 1
           description: >
-            Finalna lista kontakt osoba. Očekuje se jedan primarni kontakt
-            i opcionalno jedan sekundarni kontakt.
+            Finalna lista kontakt osoba. Očekuje se jedan primarni kontakt.
           items:
             $ref: "#/components/schemas/SubmittedContact"
 
@@ -449,7 +441,6 @@ components:
           description: Tip kontakt osobe.
           enum:
             - Primary
-            - Secondary
           example: "Primary"
 
     SubmittedProductSelection:
